kubernetes-config/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: laravel-api 
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80 
  type: ClusterIP
