kubernetes-config/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: react-frontend 
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80 
  type: ClusterIP
